--- a/adivinha.html
+++ b/adivinha.html
@@ -1,22 +1,78 @@
 <meta charset="UTF-8">
-
+<h1>Jogo da Sorte</h1>
+<h4>Tente acertar o numero Aleatorio abaixo</h4>
 <input/>
-
-<button>Tente</button>
+<button>Tentar</button>
 
 <script>
+    function sorteia() {
 
-    var segredo = 5;
+       return Math.round(Math.random() * 10);
+
+    }
+
+    function sorteiaNumeros(quantidade) {
+
+        var segredos = [];
+
+        var numero = 1;
+
+        while(numero <= quantidade) {
+
+              var numeroAleatorio = sorteia();
+              var achou = false;
+
+              if (numeroAleatorio !== 0) {
+                     for(var posicao = 0; posicao < segredos.length; posicao++) {
+
+                           if(segredos[posicao] == numeroAleatorio){
+                                achou = true;
+                                break;
+                           }
+
+                     }
+
+                     if (achou == false) {
+                           segredos.push(numeroAleatorio);
+                           numero++;
+                     }
+              }
+
+        }
+
+        return segredos;
+
+    }
+
+    var segredos = sorteiaNumeros(3);
+
+    console.log(segredos);
 
     var input = document.querySelector("input");
+    input.focus();
 
-    function verifica(){
+    function verifica() {
 
-        if (input.value == segredo) {
-            alert("Voce acertou !!!")
-        } else {
-            alert("Voce ERROU!!!")
-        }
+       var achou = false;
+
+       for(var posicao = 0; posicao < segredos.length; posicao++) {
+
+              if(input.value == segredos[posicao]) {
+
+                     alert("Você ACERTOU!");
+                     achou = true;
+                     break;
+              } 
+       }
+
+       if(achou == false) {
+
+              alert("Você ERROU!");
+       }
+
+       input.value = "";
+       input.focus();
+
     }
 
     var button = document.querySelector("button");
